[gd_scene format=3 uid="uid://boxoxjys17ggx"]

[ext_resource type="Script" uid="uid://3ev5yf772wo6" path="res://scripts/ui/hud.gd" id="1_0mwgc"]
[ext_resource type="PackedScene" uid="uid://b1rh1u14wu30f" path="res://scenes/ui/inventory_ui.tscn" id="2_hqnrr"]

[node name="HUD" type="CanvasLayer" unique_id=138545003]
script = ExtResource("1_0mwgc")

[node name="DepthRect" type="ColorRect" parent="." unique_id=2022303594]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -14.0
offset_right = 40.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.57254905, 0.3882353, 0.16470589, 1)

[node name="DepthLabel" type="Label" parent="DepthRect" unique_id=846305332]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -21.0
offset_right = 21.0
offset_bottom = 13.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Depth: 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InventoryUI" parent="." unique_id=756831527 instance=ExtResource("2_hqnrr")]
